syntax = "proto3";

package mypackage;

message FinancialTick {
    string id = 1;
    string sec_type = 2;
    string last = 3;
    string trading_date_time = 4;
}

message AnalyticsResult {
  string symbol = 1;
  string avgPrice = 2;
  string totalVolume = 3;
  string windowEnd = 4;
}